Adding azure core to opens in pom.xml