@@ -41,9 +41,8 @@
     <jacoco.min.linecoverage>0.25</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.15</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
-      --add-exports com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing=ALL-UNNAMED
-      --add-opens com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing=ALL-UNNAMED
-      --add-reads com.azure.analytics.purview.sharing=ALL-UNNAMED
+      --add-opens com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing.models=com.fasterxml.jackson.databind
+      --add-opens com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing.models=com.azure.core
     </javaModulesSurefireArgLine>
   </properties>
   <dependencies>
